# arctos_ros2_ws

./: .gitignore
src/arctos_bringup/: CMakeLists.txt  README.md  package.xml
src/arctos_bringup/launch/: arctos_bringup.launch.py  controller.launch.py  minimal.launch.py  minimal_base_xyz.launch.py  view_arctos.launch.py
src/arctos_control/: README.md  package.xml  setup.py
src/arctos_control/arctos_control/: sim_esp32.py  watchdog.py
src/arctos_control/config/: topic_based.yaml
src/arctos_control/launch/: topic_based_bringup.launch.py
src/arctos_description/: CMakeLists.txt  README.md
src/arctos_description/config/: arctos.srdf  arctos_controller.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/arctos_description/config/hardware/: test_motor_config.yaml
src/arctos_description/launch/: test_single_motor.launch.py  view_robot.launch.py
src/arctos_description/urdf/: arctos.urdf  arctos.urdf.xacro  arctos.xacro  arctos_gripper.xacro  arctos_ros2_control.xacro
src/arctos_description/urdf/common/: joint_link.xacro
src/arctos_description/urdf/hardware/: ros2_control.xacro
src/arctos_description/urdf/macros/: control_macro.xacro  joint_macro.xacro  link_macro.xacro  materials.xacro
src/arctos_description/urdf/parts/: arm_joints.xacro  arm_links.xacro  gripper.xacro
src/arctos_hardware_interface/: CMakeLists.txt  arctos_hardware_interface.xml  package.xml
src/arctos_hardware_interface/include/arctos_hardware_interface/: arctos_mks_hardware_interface.hpp
src/arctos_hardware_interface/src/: arctos_mks_hardware_interface.cpp
src/arctos_motor_driver/: CMakeLists.txt  package.xml
src/arctos_motor_driver/include/arctos_motor_driver/: can_frame.hpp  can_protocol.hpp  mks_data_types.hpp  mks_motor_driver.hpp  socket_can_bridge.hpp
src/arctos_motor_driver/src/: can_frame.cpp  can_protocol.cpp  mks_data_types.cpp  mks_motor_driver.cpp  socket_can_bridge.cpp
src/arctos_moveit_config/: .setup_assistant  README.md  package.xml
src/arctos_moveit_config/config/: arctos.ros2_control.xacro  arctos.srdf  arctos.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/arctos_step_bridge/: CMakeLists.txt  package.xml
src/arctos_step_bridge/launch/: step_bridge.launch.py
src/arctos_step_bridge/src/: step_bridge_node.cpp
src/docs/: controller_manager.md  joint_trajectory_controller_doc.md  micro_ros.md  mks_servo_reference.md  ros2_control_docs.md
src/esp32_firmware/: arctos_esp32_dual_core.ino  arctos_esp32_minimal.ino  arctos_esp32_topic_based.ino  simple_motor_test.ino
src/scripts/: setup_canable.sh
