<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arctos_hardware_interface</name>
  <version>0.0.1</version>
  <description>ROS2 driver for arctos robot arm</description>
  <maintainer email="coenheerink@outlook.com">coen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <!-- Message types -->
  <depend>can_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>rcpputils</depend>
  <depend>ros2_socketcan</depend>
  <depend>arctos_motor_driver</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <pluginlib plugin_description="${prefix}/arctos_hardware_interface.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
